Corrected form spacing

--- a/client/resources/styles/app.scss
+++ b/client/resources/styles/app.scss
@@ -683,11 +683,11 @@ button.reset {
 // Forms
 
 .form-field:not(:last-of-type) {
-    margin-bottom: 24px;
+    margin-bottom: 40px;
 }
 
 .form-field--with-helper:not(:last-of-type) {
-    margin-bottom: 16px;
+    margin-bottom: 24px;
 }
 
 .mdc-text-field--textarea {
