--- a/client/resources/styles/bundle.css
+++ b/client/resources/styles/bundle.css
@@ -5022,7 +5022,7 @@ svg.mdc-button__icon {
   font-size: 6rem;
   line-height: 6rem;
   font-weight: 300;
-  letter-spacing: -0.01563em;
+  letter-spacing: -0.01562em;
   text-decoration: inherit;
   text-transform: inherit; }
 
@@ -5586,10 +5586,10 @@ button.reset {
   color: var(--mdc-theme-on-surface); }
 
 .form-field:not(:last-of-type) {
-  margin-bottom: 24px; }
+  margin-bottom: 40px; }
 
 .form-field--with-helper:not(:last-of-type) {
-  margin-bottom: 16px; }
+  margin-bottom: 24px; }
 
 .mdc-text-field--textarea {
   width: 100%;
